--- a/initial/pom.xml
+++ b/initial/pom.xml
@@ -39,6 +39,11 @@
 			<artifactId>spring-batch-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.10</version>
+		</dependency>
 	</dependencies>
 
 	<build>
